pracaInz/force-app/main/default/objects/Delivery_Shipment__c/Delivery_Shipment__c.object-meta.xml
<CustomObject>
    <label>Delivery Shipment</label>
    <nameField>
        <label>Delivery Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>