pracaInz/force-app/main/default/objects/Delivery_Shipment__c/fields/Delivery_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order__c</fullName>
    <label>Delivery Order</label>
    <referenceTo>Delivery_Order__c</referenceTo>
    <relationshipLabel>Delivery Shipments</relationshipLabel>
    <relationshipName>Delivery_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>