pracaInz/force-app/main/default/objects/Delivery_Shipment__c/fields/Pallet_amount__c.field-meta.xml
<CustomField>
    <fullName>Pallet_amount__c</fullName>
    <label>Pallet amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>