pracaInz/force-app/main/default/objects/Delivery_Shipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Total quantity of goods in all pallets</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>