pracaInz/force-app/main/default/objects/Delivery_Shipment__c/validationRules/No_More_Pallet_Amount_On_DS.validationRule-meta.xml
<ValidationRule>
    <fullName>No_More_Pallet_Amount_On_DS</fullName>
    <active>true</active>
    <errorConditionFormula>Pallet_amount__c &gt; Delivery_Order__r.Pallet_amount__c</errorConditionFormula>
    <errorDisplayField>Pallet_amount__c</errorDisplayField>
    <errorMessage>You can&apos;t assign more pallets than pallets amount on Delivery Order</errorMessage>
</ValidationRule>